more styles and some changes in index

--- a/client/styles/style.css
+++ b/client/styles/style.css
@@ -8,6 +8,13 @@ footer {
     min-width: 855px;
 }
 
+header.conatainer,
+main.container,
+footer.conatainer {
+    max-width: 855px;
+    margin: auto;
+}
+
 header {
     background: white;
 }
