--- a/client/styles/style.css
+++ b/client/styles/style.css
@@ -141,8 +141,27 @@ footer .sitemap {
 .content {
     padding: 0 20px 20px 20px;
     overflow: auto;
+    background: #ddd;
 }
 
 .content ul li {
-    padding-top: 0;
+    margin: 10px 0;
+    padding: 10px 20px 10px 10px;
+    background: white;
+}
+
+.content div {
+    margin: 10px 0;
+    padding: 10px 20px 10px 10px;
+}
+
+.content button {
+    padding: 7px 10px 7px 10px;
+    margin: 0 10px;
+    font-size: 17px;
+}
+
+.content input {
+    padding: 7px 10px 7px 10px;
+    font-size: 17px;
 }
