--- a/client/styles/style.css
+++ b/client/styles/style.css
@@ -144,7 +144,7 @@ footer .sitemap {
     background: #ddd;
 }
 
-.content ul li {
+.content li {
     margin: 10px 0;
     padding: 10px 20px 10px 10px;
     background: white;
@@ -164,4 +164,10 @@ footer .sitemap {
 .content input {
     padding: 7px 10px 7px 10px;
     font-size: 17px;
+}
+
+.content p {
+    margin: 10px 0;
+    padding: 10px 20px 10px 10px;
+    background: lightgray;
 }
