--- a/client/styles/style.css
+++ b/client/styles/style.css
@@ -1,214 +1,258 @@
-body {
-    background: #f9e933;
-    font-family: 'Droid Sans', sans-serif;
-}
-
-header,
-main,
-footer {
-    min-width: 855px;
-}
-
-header .container,
-main .container,
-footer .container {
-    max-width: 855px;
-    margin: auto;
-}
-
-header {
-    background: white;
-    overflow: auto;
-    border-bottom: 1px solid #dddddd;
-    padding: 25px 0 25px 0;
-}
-
-h1 {
-    float: left;
-    width: 570px;
-    font-family: 'Ubuntu', sans-serif;
-    font-style: italic;
-    font-size: 3em;
-    color: #BB3333;
-}
-
-h2 {
-    float: left;
-    width: 570px;
-    font-family: 'Ubuntu', sans-serif;
-    font-size: 2em;
-    font-weight: bold;
-    margin-bottom: 20px;
-}
-
-h3 {
-    float: left;
-    width: 570px;
-    font-family: 'Ubuntu', sans-serif;
-    font-size: 1.5em;
-    padding-top: 5%;
-    margin-bottom: 20px;
-}
-
-h4 {
-    font-family: 'Ubuntu', sans-serif;
-}
-
-h5 {
-    font-family: 'Ubuntu', sans-serif;
-    font-size: 1.25em;
-    margin-bottom: 20px;
-}
-
-header nav {
-    float: right;
-    width: 285px;
-}
-
-a {
-    color: #FF0000;
-    text-decoration: none;
-    font-weight: bold;
-}
-
-footer a:hover {
-    background: #FF0000;
-    color: black;
-}
-
-main {
-    background: white;
-    overflow: auto;
-    padding: 40px;
-}
-
-.main-left {
-    float: left;
-    width: 570px;
-}
-
-main .lightbulb {
-    float: right;
-    width: 285px;
-}
-
-footer {
-    margin-top: 5%;
-}
-
-footer .contact {
-    float: left;
-    width: 570px;
-}
-
-footer .sitemap {
-    float: right;
-    width: 285px;
-}
-
-.mapleft {
-    float: left;
-}
-
-.mapright {
-    float: right;
-}
-
-.faqs {
-    float: left;
-    margin: 5%;
-}
-
-.QA {
-    font-weight: bold;
-    font-size: 1.2em;
-}
-
-.tabs a span {
-    display: inline-block;
-    border-radius: 5px 5px 0 0;
-    width: 100px;
-    margin-right: 10px;
-    text-align: center;
-    background: #ddd;
-    padding: 5px;
-}
-
-.tabs a span.active {
-    background: #eee;
-}
-
-.content {
-    padding: 0 20px 20px 20px;
-    overflow: auto;
-    background: #ddd;
-}
-
-.content li {
-    margin: 10px 0;
-    padding: 10px 20px 10px 10px;
-    background: white;
-}
-
-.content div {
-    margin: 10px 0;
-    padding: 10px 20px 10px 10px;
-}
-
-.content button {
-    padding: 7px 10px 7px 10px;
-    margin: 0 10px;
-    font-size: 17px;
-}
-
-.content input {
-    padding: 7px 10px 7px 10px;
-    font-size: 17px;
-}
-
-.content p {
-    margin: 10px 0;
-    padding: 10px 20px 10px 10px;
-    background: lightgray;
-}
-
-main .authorization {
-    max-width: 1200px;
-    background: #ddd;
-    /*padding-top: 10px; */
-    margin: auto;
-    border-radius: 5px;
-    /*border-radius: 5px 5px 0 0; */
-}
-
-main .authorization p {
-    padding: 15px;
-    padding-bottom: 0px;
-    /*padding-left: 15px;*/
-    font-size: 20px;
-    color: red;
-}
-
-main .authorization input {
-    font-family: Ubuntu;
-    margin: 10px;
-    font-size: 18px;
-    padding: 5px;
-    padding-right: 60px;
-    border: 2px solid black;
-    border-radius: 8px;
-}
-
-main .authorization button {
-    font-family: Ubuntu;
-    top: 50px;
-    left: 50px;
-    /*расстояние от края*/
-    font-size: 18px;
-    border-radius: 8px;
-    border: 2px solid black;
-    padding: 5px;
-    margin: 10px;
-    text-align: center;
-    float: right;
-}
+    body {
+        background: #f9e933;
+        font-family: 'Droid Sans', sans-serif;
+    }
+    
+    header,
+    main,
+    footer {
+        min-width: 855px;
+    }
+    
+    header .container,
+    main .container,
+    footer .container {
+        max-width: 855px;
+        margin: auto;
+    }
+    
+    header {
+        background: white;
+        overflow: auto;
+        border-bottom: 1px solid #dddddd;
+        padding: 25px 0 25px 0;
+    }
+    
+    h1 {
+        float: left;
+        width: 570px;
+        font-family: 'Ubuntu', sans-serif;
+        font-style: italic;
+        font-size: 3em;
+        color: #BB3333;
+    }
+    
+    h2 {
+        float: left;
+        width: 570px;
+        font-family: 'Ubuntu', sans-serif;
+        font-size: 2em;
+        font-weight: bold;
+        margin-bottom: 20px;
+    }
+    
+    h3 {
+        float: left;
+        width: 570px;
+        font-family: 'Ubuntu', sans-serif;
+        font-size: 1.5em;
+        padding-top: 5%;
+        margin-bottom: 20px;
+    }
+    
+    h4 {
+        font-family: 'Ubuntu', sans-serif;
+    }
+    
+    h5 {
+        font-family: 'Ubuntu', sans-serif;
+        font-size: 1.25em;
+        margin-bottom: 20px;
+    }
+    
+    header nav {
+        float: right;
+        width: 285px;
+    }
+    
+    a {
+        color: #FF0000;
+        text-decoration: none;
+        font-weight: bold;
+    }
+    
+    footer a:hover {
+        background: #FF0000;
+        color: black;
+    }
+    
+    main {
+        background: white;
+        overflow: auto;
+        padding: 40px;
+    }
+    
+    .main-left {
+        float: left;
+        width: 570px;
+    }
+    
+    main .lightbulb {
+        float: right;
+        width: 285px;
+    }
+    
+    footer {
+        margin-top: 5%;
+    }
+    
+    footer .contact {
+        float: left;
+        width: 570px;
+    }
+    
+    footer .sitemap {
+        float: right;
+        width: 285px;
+    }
+    
+    .mapleft {
+        float: left;
+    }
+    
+    .mapright {
+        float: right;
+    }
+    
+    .faqs {
+        float: left;
+        margin: 5%;
+    }
+    
+    .QA {
+        font-weight: bold;
+        font-size: 1.2em;
+    }
+    
+    .tabs a span {
+        display: inline-block;
+        border-radius: 5px 5px 0 0;
+        width: 100px;
+        margin-right: 10px;
+        text-align: center;
+        background: #ddd;
+        padding: 5px;
+    }
+    
+    .tabs a span.active {
+        background: #eee;
+    }
+    
+    .tabs input {
+        border-radius: 2px;
+    }
+    
+    .content {
+        /* padding: 0 20px 20px 20px; */
+        overflow: auto;
+        background: lightgray;
+        width: 600px;
+    }
+    
+    .content div {
+        margin: 10px 0;
+        padding: 10px 20px 10px 10px;
+    }
+    
+    .content li {
+        background: white;
+        list-style: none;
+        margin: 10px;
+        font-size: 20px;
+        padding: 10px;
+    }
+    
+    .content p {
+        padding: 15px;
+        padding-bottom: 7px;
+        font-size: 20px;
+    }
+    
+    .content input {
+        font-family: Ubuntu;
+        width: auto;
+        margin: 17px;
+        margin-left: 0%;
+        padding: 8px;
+        font-size: 17px;
+    }
+    
+    .content h3 {
+        margin: 10px;
+        float: left;
+        width: 220px;
+        text-align: right;
+        font-family: 'Ubuntu', sans-serif;
+        font-size: 20px;
+        padding-top: 2%;
+    }
+    
+    .content button {
+        font-family: 'Ubuntu', sans-serif;
+        margin: 17px;
+        margin-bottom: 17px;
+        float: right;
+        padding: 8px;
+        font-size: 17px;
+    }
+    
+    main .authorization {
+        max-width: 1200px;
+        background: #ddd;
+        margin: auto;
+        border-radius: 5px;
+    }
+    
+    main .authorization p {
+        padding: 15px;
+        padding-bottom: 0px;
+        font-size: 20px;
+        color: red;
+    }
+    
+    main .authorization input {
+        font-family: Ubuntu;
+        margin: 10px;
+        font-size: 18px;
+        padding: 5px;
+        padding-right: 60px;
+    }
+    
+    main .authorization button {
+        font-family: Ubuntu;
+        top: 50px;
+        left: 50px;
+        font-size: 18px;
+        padding: 5px;
+        margin: 10px;
+        text-align: center;
+        float: right;
+    }
+    
+    .linkEdit {
+        display: inline-block;
+        float: right;
+        font-size: 13px;
+        margin-top: 2px;
+        padding-left: 15px;
+    }
+    
+    .linkEdit:hover {
+        background: red;
+        color: white;
+        text-decoration: none;
+    }
+    
+    .linkRemove {
+        display: inline-block;
+        float: right;
+        font-size: 13px;
+        margin-top: 2px;
+        padding-left: 10px;
+    }
+    
+    .linkRemove:hover {
+        background: red;
+        color: white;
+        text-decoration: none;
+    }
